fix(v-input): fix loader styles
underline was overlapping

--- a/src/stylus/components/_inputs.styl
+++ b/src/stylus/components/_inputs.styl
@@ -29,7 +29,7 @@ theme(v-input, "v-input")
   transition: $primary-transition
 
   .v-progress-linear
-    bottom: 0
+    top: 100%
     left: 0
     margin: 0
     position: absolute
